# Hackernews-Favorites-Open-In-Browser

./: README.md  favourties.json  pyproject.toml
src/hn_open_favs_in_browser/: main.py
